--- a/.env.example
+++ b/.env.example
@@ -6,4 +6,6 @@ DATABASE_PORT=~
 DATABASE_NAME=~
 DATABASE_USERNAME=~
 DATABASE_PASSWORD=~
-
+CLOUDINARY_NAME=~
+CLOUDINARY_KEY=~
+CLOUDINARY_SECRET=~
