remove bundled skins

--- a/api/skin-bundle/models/skin-bundle.settings.json
+++ b/api/skin-bundle/models/skin-bundle.settings.json
@@ -19,9 +19,10 @@
       "unique": false,
       "required": true
     },
-    "bundled_skins": {
-      "via": "skin_bundle",
-      "collection": "bundled-skin"
+    "weapon_skins": {
+      "collection": "weapon-skin",
+      "via": "skin_bundles",
+      "dominant": true
     }
   }
 }
