--- a/api/weapon-type/models/weapon-type.settings.json
+++ b/api/weapon-type/models/weapon-type.settings.json
@@ -15,6 +15,10 @@
     },
     "weapons": {
       "collection": "weapon"
+    },
+    "slug": {
+      "type": "uid",
+      "targetField": "name"
     }
   }
 }
