--- a/api/skin-bundle/models/skin-bundle.settings.json
+++ b/api/skin-bundle/models/skin-bundle.settings.json
@@ -20,9 +20,13 @@
       "required": true
     },
     "weapon_skins": {
-      "collection": "weapon-skin",
       "via": "skin_bundles",
+      "collection": "weapon-skin",
       "dominant": true
+    },
+    "slug": {
+      "type": "uid",
+      "targetField": "name"
     }
   }
 }
