--- a/api/weapon/models/weapon.settings.json
+++ b/api/weapon/models/weapon.settings.json
@@ -28,6 +28,10 @@
       ],
       "plugin": "upload",
       "required": true
+    },
+    "slug": {
+      "type": "uid",
+      "targetField": "name"
     }
   }
 }
