--- a/api/weapon-type/models/weapon-type.settings.json
+++ b/api/weapon-type/models/weapon-type.settings.json
@@ -19,6 +19,15 @@
     "slug": {
       "type": "uid",
       "targetField": "name"
+    },
+    "picture": {
+      "model": "file",
+      "via": "related",
+      "allowedTypes": [
+        "images"
+      ],
+      "plugin": "upload",
+      "required": false
     }
   }
 }
