link skins to weapon

--- a/api/skin-collection/models/skin-collection.settings.json
+++ b/api/skin-collection/models/skin-collection.settings.json
@@ -18,8 +18,8 @@
       "required": true
     },
     "weapon_skins": {
-      "collection": "weapon-skin",
-      "via": "skin_collection"
+      "via": "skin_collection",
+      "collection": "weapon-skin"
     },
     "slug": {
       "type": "uid",
