--- a/api/weapon/models/weapon.settings.json
+++ b/api/weapon/models/weapon.settings.json
@@ -32,6 +32,10 @@
     "slug": {
       "type": "uid",
       "targetField": "name"
+    },
+    "weapon_skins": {
+      "via": "weapon",
+      "collection": "weapon-skin"
     }
   }
 }
