--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "valostrapi",
   "private": true,
   "version": "0.1.0",
-  "description": "A Strapi application",
+  "description": "Valorant Skins locker",
   "scripts": {
     "dev": "strapi develop",
     "start": "strapi start",
@@ -11,22 +11,22 @@
   },
   "devDependencies": {},
   "dependencies": {
-    "knex": "^0.21.2",
-    "pg": "^8.3.0",
+    "knex": "^0.21",
+    "pg": "^8.3",
     "sqlite3": "latest",
-    "strapi": "3.0",
-    "strapi-admin": "3.0",
-    "strapi-connector-bookshelf": "3.0",
-    "strapi-plugin-content-manager": "3.0",
-    "strapi-plugin-content-type-builder": "3.0",
-    "strapi-plugin-email": "3.0",
-    "strapi-plugin-upload": "3.0",
-    "strapi-plugin-users-permissions": "3.0",
-    "strapi-provider-upload-cloudinary": "^3.0",
-    "strapi-utils": "3.0"
+    "strapi": "^3.1",
+    "strapi-admin": "^3.1",
+    "strapi-connector-bookshelf": "^3.1",
+    "strapi-plugin-content-manager": "^3.1",
+    "strapi-plugin-content-type-builder": "^3.1",
+    "strapi-plugin-email": "^3.1",
+    "strapi-plugin-upload": "^3.1",
+    "strapi-plugin-users-permissions": "^3.1",
+    "strapi-provider-upload-cloudinary": "^3.1",
+    "strapi-utils": "^3.1"
   },
   "author": {
-    "name": "A Strapi developer"
+    "name": "Chypriote"
   },
   "strapi": {
     "uuid": "37ed88a2-9a89-4ac3-a88e-e5f131c744a5"
