--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "knex": "^0.21",
     "pg": "^8.5",
-    "sqlite3": "latest",
+    "sqlite3": "^5.0",
     "strapi": "^3.4",
     "strapi-admin": "^3.4",
     "strapi-connector-bookshelf": "^3.4",
